--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,32 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --padding: 0.3rem;
+  /* Contrast to fill at least 4.5:1 */
+  --brand: #518000;
+  /* Contrast to fill at least 4.5:1 */
+  --text-strong: #313d1a;
+  /* Contrast to fill at least 4.5:1 */
+  --text-weak: #6E7656;
+  /* Contrast to fill at least 3:1 */
+  --stroke-strong: #829669;
+  --stroke-weak-variant: hsla(82, 28.14%, 81.65%, 1);
+  --stroke-weak: hsla(82, 28.14%, 91.65%, 1);
+  --fill: #f8faf5;
+  --background: #ffffff;
+  --error-text: hsla(0, 55.7%, 50.3%, 1);
+  --error-stroke-strong: hsla(0, 56%, 50.3%, 0.8);
+  --error-stroke-weak: hsla(0, 55.7%, 50.3%, 0.2);
+  --error-fill: hsla(0, 55.7%, 50.3%, 0.05);
+  --warning-text: hsla(42, 69.5%, 33%, 1);
+  --warning-stroke-strong: hsla(42, 69.5%, 33%, 0.8);
+  --warning-stroke-weak: hsla(42, 69.5%, 33%, 0.2);
+  --warning-fill: hsla(42, 69.5%, 33%, 0.05);
+  --success-text: hsla(162, 90.5%, 25.2%, 1);
+  --success-stroke-strong: hsla(162, 90.5%, 25.2%, 0.8);
+  --success-stroke-weak: hsla(162, 90.5%, 25.2%, 0.2);
+  --success-fill: hsla(162, 90.5%, 25.2%, 0.05);
+  --skeleton-loading-background: #e7dcdc;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -14,6 +40,9 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  /* display: flex;
+  flex-direction: column;
+  gap: 10px; */
 }
 
 body {
@@ -22,6 +51,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  min-height: 100vh;
 }
 
 * {
@@ -40,3 +70,32 @@ a {
     color-scheme: dark;
   }
 }
+
+header {
+  display: flex;
+  justify-content: center;
+  padding: var(--padding);
+}
+
+@media only screen and (max-width: 600) {
+  body {
+    padding: 5px;
+  }
+}
+
+.material-symbol--container {
+  height: 24px;
+  width: 24px;
+}
+
+/* Google fonts & Icons - START */
+
+.material-symbols-outlined {
+  font-variation-settings:
+    'FILL' 1,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 24
+}
+
+/* Google fonts & Icons - END */
