--- a/src/components/CurrentGame.module.css
+++ b/src/components/CurrentGame.module.css
@@ -97,3 +97,22 @@
   align-items: center;
   justify-content: space-between;
 }
+
+.new-game-form--form--add-players {
+  display: flex;
+  gap: var(--padding);
+  align-items: center;
+  width: fit-content;
+}
+
+.running-game--container {
+  display: flex;
+  width: 100%;
+  padding: var(--padding);
+}
+
+.running-game--game-info {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
