fix bugs with local storage, hole input, some styling

--- a/src/components/CurrentGame.module.css
+++ b/src/components/CurrentGame.module.css
@@ -105,6 +105,11 @@
   width: fit-content;
 }
 
+.new-game-form--form--button-container {
+  display: flex;
+  justify-content: space-between;
+}
+
 .running-game--container {
   display: flex;
   width: 100%;
