--- a/src/components/CurrentGame.module.css
+++ b/src/components/CurrentGame.module.css
@@ -154,6 +154,7 @@
 
 .running-game--hole-players--buttons--container {
   display: flex;
+  justify-content: center;
 }
 
 .running-game--hole-players--buttons--button {
