--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,16 +1,16 @@
 :root {
+  /* These are from the book as is */
   /* Contrast to fill at least 4.5:1 */
-  --brand: #518000;
+  --brand: hsl(230, 64.8%, 57.4%);
   /* Contrast to fill at least 4.5:1 */
-  --text-strong: #313d1a;
+  --text-strong: hsl(230, 39.9%, 17.2%);
   /* Contrast to fill at least 4.5:1 */
-  --text-weak: #6E7656;
+  --text-weak: hsl(230, 15.6%, 41.5%);
   /* Contrast to fill at least 3:1 */
-  --stroke-strong: #829669;
-  --stroke-weak-variant: hsla(82, 28.14%, 81.65%, 1);
-  --stroke-weak: hsla(82, 28.14%, 91.65%, 1);
-  --fill: #f8faf5;
-  --background: #ffffff;
+  --stroke-strong: hsl(230, 17.6%, 57.5%);
+  --stroke-weak: hsl(230, 28.1%, 91.6%);
+  --fill: hsl(230, 32.9%, 97%);
+  --background: hsl(0, 0%, 100%);
   --error-text: hsla(0, 55.7%, 50.3%, 1);
   --error-stroke-strong: hsla(0, 56%, 50.3%, 0.8);
   --error-stroke-weak: hsla(0, 55.7%, 50.3%, 0.2);
@@ -53,22 +53,22 @@
   --success-stroke-weak: hsla(162, 90.5%, 25.2%, 0.2);
   --success-fill: hsla(162, 90.5%, 25.2%, 0.05);
   --skeleton-loading-background: #e7dcdc;
+  --padding: 0.3rem;
   color-scheme: light;
 }
 
 :root[data-theme="dark"] {
   /* Contrast to fill at least 4.5:1 */
-  --brand: #d7fc97;
+  --brand: hsl(230, 95.2%, 79.2%);
   /* Contrast to fill at least 4.5:1 */
-  --text-strong: #ffffff;
+  --text-strong: hsl(230, 0%, 100%);
   /* Contrast to fill at least 4.5:1 */
-  --text-weak: #d5d9ce;
+  --text-weak: hsl(230, 12.4%, 82.9%);
   /* Contrast to fill at least 3:1 */
-  --stroke-strong: #a0a695;
-  --stroke-weak-variant: hsl(82, 8.1%, 33.1%);
-  --stroke-weak: hsl(82, 8.1%, 23.1%);
-  --fill: hsl(82, 11.1%, 13.5%);
-  --background: #171912;
+  --stroke-strong: hsl(230, 8.5%, 61.7%);
+  --stroke-weak: hsl(230, 8.1%, 23.1%);
+  --fill: hsl(230, 11.1%, 13.5%);
+  --background: hsl(230, 17.6%, 8.5%);
   --error-text: hsla(0, 100%, 80.5%, 1);
   --error-stroke-strong: hsla(0, 100%, 80.5%, 0.8);
   --error-stroke-weak: hsla(0, 100%, 80.5%, 0.2);
@@ -82,23 +82,23 @@
   --success-stroke-weak: hsla(162, 41.5%, 62.4%, 0.2);
   --success-fill: hsla(162, 41.5%, 62.4%, 0.05);
   --skeleton-loading-background: rgba(255, 255, 255, 0.13);
+  --padding: 0.3rem;
   color-scheme: dark;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     /* Contrast to fill at least 4.5:1 */
-    --brand: #d7fc97;
+    --brand: hsl(230, 95.2%, 79.2%);
     /* Contrast to fill at least 4.5:1 */
-    --text-strong: #ffffff;
+    --text-strong: hsl(230, 0%, 100%);
     /* Contrast to fill at least 4.5:1 */
-    --text-weak: #d5d9ce;
+    --text-weak: hsl(230, 12.4%, 82.9%);
     /* Contrast to fill at least 3:1 */
-    --stroke-strong: #a0a695;
-    --stroke-weak-variant: hsl(82, 8.1%, 33.1%);
-    --stroke-weak: hsl(82, 8.1%, 23.1%);
-    --fill: hsl(82, 11.1%, 13.5%);
-    --background: #171912;
+    --stroke-strong: hsl(230, 8.5%, 61.7%);
+    --stroke-weak: hsl(230, 8.1%, 23.1%);
+    --fill: hsl(230, 11.1%, 13.5%);
+    --background: hsl(230, 17.6%, 8.5%);
     --error-text: hsla(0, 100%, 80.5%, 1);
     --error-stroke-strong: hsla(0, 100%, 80.5%, 0.8);
     --error-stroke-weak: hsla(0, 100%, 80.5%, 0.2);
@@ -112,6 +112,8 @@
     --success-stroke-weak: hsla(162, 41.5%, 62.4%, 0.2);
     --success-fill: hsla(162, 41.5%, 62.4%, 0.05);
     --skeleton-loading-background: rgba(255, 255, 255, 0.13);
+    --padding: 0.3rem;
+    color-scheme: dark;
   }
 }
 
@@ -206,10 +208,13 @@ header {
 
 @keyframes rotateIcon {
   0% {
-    transform: rotate(var(--rotation-offset)); /* Start from the offset */
+    transform: rotate(var(--rotation-offset));
+    /* Start from the offset */
   }
+
   100% {
-    transform: rotate(calc(360deg + var(--rotation-offset))); /* Complete the 360-degree rotation with the offset */
+    transform: rotate(calc(360deg + var(--rotation-offset)));
+    /* Complete the 360-degree rotation with the offset */
   }
 }
 
