--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -181,7 +181,7 @@ header {
   justify-self: center;
 }
 
-@media only screen and (max-width: 600) {
+@media only screen and (max-width: 600px) {
   body {
     padding: 5px;
   }
