--- a/src/components/PaneSelector.module.css
+++ b/src/components/PaneSelector.module.css
@@ -13,6 +13,9 @@
   position: relative;
   flex-grow: 1;
   justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 0.1rem;
 }
 
 .pane-selector--symbol-container:global(.selected)::after {
