some total game info displaying under game name

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,6 +25,7 @@
   --success-fill: hsla(162, 90.5%, 25.2%, 0.05);
   --skeleton-loading-background: #e7dcdc;
   --padding: 0.3rem;
+  --leading-player-score-color: #8bc34a;
 }
 
 :root[data-theme="light"] {
@@ -54,6 +55,7 @@
   --success-fill: hsla(162, 90.5%, 25.2%, 0.05);
   --skeleton-loading-background: #e7dcdc;
   --padding: 0.3rem;
+  --leading-player-score-color: #8bc34a;
   color-scheme: light;
 }
 
@@ -83,6 +85,7 @@
   --success-fill: hsla(162, 41.5%, 62.4%, 0.05);
   --skeleton-loading-background: rgba(255, 255, 255, 0.13);
   --padding: 0.3rem;
+  --leading-player-score-color: #8bc34a;
   color-scheme: dark;
 }
 
@@ -113,6 +116,7 @@
     --success-fill: hsla(162, 41.5%, 62.4%, 0.05);
     --skeleton-loading-background: rgba(255, 255, 255, 0.13);
     --padding: 0.3rem;
+    --leading-player-score-color: #8bc34a;
     color-scheme: dark;
   }
 }
