--- a/src/components/PlayerScoreGrid.module.css
+++ b/src/components/PlayerScoreGrid.module.css
@@ -22,8 +22,16 @@
   align-items: center;
 }
 
+.running-game--hole-players--leading-player--container {
+  background-color: rgba(var(--leading-player-score-color), 0.2);
+  border-radius: 999em;
+  padding: 0.25rem 0.5rem;
+  border: solid rgba(var(--leading-player-score-color), 0.8) 1px;
+}
+
 .running-game--hole-players--leading-player {
-  color: var(--leading-player-score-color)
+  color: rgb(var(--leading-player-score-color));
+  border-radius: 50%;
 }
 
 .running-game--hole-players--buttons--container {
