--- a/src/components/CurrentGame.module.css
+++ b/src/components/CurrentGame.module.css
@@ -133,12 +133,13 @@
 
 .running-game--game-info-container {
   position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
 }
 
 .running-game--game-info-settings {
-  position: absolute;
-  bottom: 0;
-  right: 0;
+  display: flex;
 }
 
 .running-game--hole-list {
