--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -200,6 +200,7 @@ header {
   flex-direction: column;
   width: 100%;
   padding: var(--padding);
+  gap: 0.75rem;
 }
 
 .title--container {
@@ -245,7 +246,7 @@ header {
 }
 
 .material-symbols-outlined.closed {
-  transform: rotate(0);
+  transform: rotate(0deg);
   transition: transform linear 75ms;
 }
 
