--- a/src/components/CurrentGame.module.css
+++ b/src/components/CurrentGame.module.css
@@ -150,6 +150,7 @@
 
 .running-game--game-info-settings--dialog-content--buttons {
   display: flex;
+  gap: 0.5rem;
 }
 
 .running-game--hole-list {
