--- a/src/components/Buttons.module.css
+++ b/src/components/Buttons.module.css
@@ -8,6 +8,9 @@
 
 .button--base {
   display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.5rem 0.75rem;
 }
 
 .button--base:focus-visible {
@@ -41,7 +44,7 @@
 
 .button--primary {
   background-color: var(--brand);
-  border-radius: 10px;
+  border-radius: 5px;
   border: 0;
   border-width: 2px;
   border-style: solid;
