--- a/src/components/Buttons.module.css
+++ b/src/components/Buttons.module.css
@@ -11,9 +11,11 @@
   align-items: center;
   justify-content: center;
   padding: 0.5rem 0.75rem;
+  width: fit-content;
 }
 
-.button--base:focus-visible {
+.button--base:focus-visible,
+.button--wrapper:focus-visible {
   outline: 2px solid var(--brand);
   outline-offset: 2px;
 }
@@ -33,13 +35,8 @@
 }
 
 .button--wrapper {
-  border: none;
-  padding: 0;
-  background: none;
-  font: inherit;
-  text-align: inherit;
-  cursor: inherit;
-  appearance: none;
+  all: unset;
+  cursor: pointer;
 }
 
 .button--primary {
