change hole disabled effect to be opacity instead of brightness

--- a/src/components/CurrentGame.module.css
+++ b/src/components/CurrentGame.module.css
@@ -181,7 +181,7 @@
 }
 
 .running-game--hole-info.disabled > :not(.running-game--hole-info--finish-game--container) {
-  filter: brightness(0.5);
+  opacity: 0.5;
 }
 
 .running-game--hole-players--container {
