history game "card" styling

--- a/src/components/History.module.css
+++ b/src/components/History.module.css
@@ -27,6 +27,12 @@
   list-style: none;
 }
 
+.history-list--game-container {
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
+}
+
 .history-list--no-games {
   display: flex;
   justify-content: center;
