--- a/src/components/Buttons.module.css
+++ b/src/components/Buttons.module.css
@@ -208,6 +208,20 @@
   cursor: pointer;
 }
 
+.switch--tack::after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: var(--text-strong);
+  border-radius: 50%;
+  opacity: 0.3;
+}
+
+.switch--container:hover .switch--tack::after {
+  transform: scale(2);
+}
+
 .switch--container.disabled:hover {
   cursor: not-allowed;
 }
