--- a/src/components/Buttons.module.css
+++ b/src/components/Buttons.module.css
@@ -208,7 +208,7 @@
   cursor: pointer;
 }
 
-.switch--container.loading > *:not(.loading-icon--container) {
+.switch--container.loading>*:not(.loading-icon--container) {
   visibility: hidden;
 }
 
@@ -294,6 +294,9 @@
 .loading-icon--container {
   display: flex;
   position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .loading-icon {
